--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/sane/sails-hook-babel.git"
+    "url": "git://github.com/heartyoh/sails-hook-babel.git"
   },
   "keywords": [
     "sails",
@@ -25,22 +25,22 @@
   "author": "Markus Padourek",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sane/sails-hook-babel/issues"
+    "url": "https://github.com/heartyoh/sails-hook-babel/issues"
   },
-  "homepage": "https://github.com/sane/sails-hook-babel",
+  "homepage": "https://github.com/heartyoh/sails-hook-babel",
   "sails": {
     "isHook": true
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
-    "source-map-support": "^0.4.6"
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "source-map-support": "^0.5.4"
   },
   "devDependencies": {
-    "glob": "^5.0.3",
-    "mocha": "^2.2.1",
-    "sails": "~0.11.0"
+    "glob": "^7.1.2",
+    "mocha": "^5.0.5",
+    "sails": "^1.0.1"
   },
   "contributors": [
     {
